--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 
               <!-- Left Content -->
               <div class="col-lg-6 mb-4 mb-lg-0">
-                <h6 class="text-success fw-bold">Why Choosing Us!</h6>
+                <h6 class="text-success fw-bold fs-3">Why Choosing Us!</h6>
                 <h2 class="fw-bold display-5">Few Reasons Why People Choosing
                   Us!</h2>
                 <p class="mt-3 text-muted">
@@ -1064,18 +1064,6 @@
       }
     });
   });
-</script>
-
-        <script>
-  function showMessage() {
-    alert("Form Submitted Successfully!");
-  }
-</script>
-
-        <script>
-  function showMessage() {
-    document.getElementById("successMsg").style.display = "block";
-  }
 </script>
 
         <script
