--- a/features.html
+++ b/features.html
@@ -284,7 +284,7 @@
 
             <!-- Left Content -->
             <div class="col-lg-6 mb-4 mb-lg-0">
-              <h6 class="text-success fw-bold">Why Choosing Us!</h6>
+              <h6 class="text-success fw-bold fs-3">Why Choosing Us!</h6>
               <h2 class="fw-bold display-5">Few Reasons Why People Choosing
                 Us!</h2>
               <p class="mt-3 text-muted">
