--- a/reviews.html
+++ b/reviews.html
@@ -265,7 +265,7 @@
               <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="fab fa-youtube"></i></a>
               <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
-                  cclass="fab fa-instagram"></i></a>
+                  class="fab fa-instagram"></i></a>
             </div>
           </div>
 
