--- a/about.html
+++ b/about.html
@@ -414,7 +414,7 @@
             <div class="feature-box border-start ps-4">
               <i class="fa fa-award fa-3x text-success mb-3"></i>
               <h4 class="mb-3">Award Winning</h4>
-              <p>Each award reflects the quiet beauty we bring to life—spaces that speak, soothe, and stay with you.</p>
+              <p>Each award reflects the quiet beauty we bring to life spaces that speak, soothe, and stay with you.</p>
             </div>
           </div>
           <div class="col-12 col-sm-6 col-lg-12">
