--- a/reviews.html
+++ b/reviews.html
@@ -230,11 +230,13 @@
               <div class="mt-3 d-flex justify-content-center">
                 <button class="btn btn-light text-success me-2" type="button"
                   data-bs-target="#testimonialCarousel" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon"></span>
+                  <span class="carousel-control-prev-icon"
+                  style="background-color: green;"></span>
                 </button>
                 <button class="btn btn-light" type="button"
                   data-bs-target="#testimonialCarousel" data-bs-slide="next">
-                  <span class="carousel-control-next-icon"></span>
+                  <span class="carousel-control-next-icon"
+                  style="background-color: green;"></span>
                 </button>
               </div>
 
