--- a/features.html
+++ b/features.html
@@ -288,10 +288,11 @@
               <h2 class="fw-bold display-5">Few Reasons Why People Choosing
                 Us!</h2>
               <p class="mt-3 text-muted">
-                Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                Aliqu diam amet diam et eos.
-                Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo
-                justo magna dolore erat amet
+                We provide expert care and reliable service for every garden
+                need.
+                Our team uses modern techniques and eco-friendly practices.
+                We focus on quality, precision, and customer satisfaction.
+                With years of experience, we bring life and beauty to your space
               </p>
               <a href="#" class="btn btn-success p-3 mt-3">Explore More</a>
             </div>
