--- a/services.html
+++ b/services.html
@@ -287,8 +287,7 @@
                 class="service-icon">
               <h5>Landscaping</h5>
               <p>
-                Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem
-                sed diam stet diam sed stet.
+                Your space is perfectly and beautifully designed. It brings harmony and elegance, ensuring every detail is crafted with care and precision.
               </p>
               <div class="toggle-container">
                 <span class="toggle-icon">+</span>
@@ -302,8 +301,7 @@
               <img src="images/icon-2.png" alt="Pruning Plants"
                 class="service-icon">
               <h5>Pruning plants</h5>
-              <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem
-                sed diam stet diam sed stet.</p>
+              <p>Pruning keeps plants healthy and well-shaped, our experts trim with care to promote growth and maintain garden beauty</p>
               <div class="toggle-container">
                 <span class="toggle-icon">+</span>
                 <a href="#" class="btn btn-sm btn-success">Read More</a>
@@ -317,8 +315,7 @@
                 class="service-icon">
               <h5>Irrigation & Drainage</h5>
               <p>
-                Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem
-                sed diam stet diam sed stet.
+               Proper irrigation ensures healthy growth, while efficient drainage prevents water damage and keeps your garden thriving.
               </p>
               <div class="toggle-container">
                 <span class="toggle-icon">+</span>
@@ -333,8 +330,7 @@
                 class="service-icon">
               <h5>Garden Maintenance</h5>
               <p>
-                Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem
-                sed diam stet diam sed stet.
+                Regular care keeps your garden neat and vibrant, our team maintains plants, soil, and design for lasting beauty.
               </p>
               <div class="toggle-container">
                 <span class="toggle-icon">+</span>
@@ -349,8 +345,7 @@
                 class="service-icon">
               <h5>Green Technology</h5>
               <p>
-                Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem
-                sed diam stet diam sed stet.
+                We use eco-friendly tools and smart methods, reducing waste while keeping your garden healthy and sustainable
               </p>
               <div class="toggle-container">
                 <span class="toggle-icon">+</span>
@@ -365,8 +360,7 @@
                 class="service-icon">
               <h5>Urban Gardening</h5>
               <p>
-                Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem
-                sed diam stet diam sed stet.
+                Transform small spaces into green retreats, our team designs and maintains vibrant gardens for city living.
               </p>
               <div class="toggle-container">
                 <span class="toggle-icon">+</span>
