--- a/projects.html
+++ b/projects.html
@@ -262,10 +262,10 @@
     <!-- Tab Content -->
     <div class="container my-5">
       <div class="tab-content">
+        <!-- All Projects -->
         <div class="tab-pane fade show active" id="all">
           <div class="row g-4">
-
-            <!-- Project Card Example -->
+            <!-- 1 -->
             <div class="col-md-4">
               <div class="project-item shadow-sm">
                 <img src="images/service-1.jpg" class="img-fluid rounded-3" alt="Landscaping">
@@ -279,6 +279,7 @@
               </div>
             </div>
 
+            <!-- 2 -->
             <div class="col-md-4">
               <div class="project-item shadow-sm">
                 <img src="images/service-2.jpg" class="img-fluid rounded-3" alt="Pruning Plants">
@@ -292,6 +293,7 @@
               </div>
             </div>
 
+            <!-- 3 -->
             <div class="col-md-4">
               <div class="project-item shadow-sm">
                 <img src="images/service-3.jpg" class="img-fluid rounded-3" alt="Irrigation & Drainage">
@@ -305,6 +307,7 @@
               </div>
             </div>
 
+            <!-- 4 -->
             <div class="col-md-4">
               <div class="project-item shadow-sm">
                 <img src="images/service-4.jpg" class="img-fluid rounded-3" alt="Garden Maintenance">
@@ -318,6 +321,7 @@
               </div>
             </div>
 
+            <!-- 5 -->
             <div class="col-md-4">
               <div class="project-item shadow-sm">
                 <img src="images/service-5.jpg" class="img-fluid rounded-3" alt="Green Technology">
@@ -331,6 +335,7 @@
               </div>
             </div>
 
+            <!-- 6 -->
             <div class="col-md-4">
               <div class="project-item shadow-sm">
                 <img src="images/service-6.jpg" class="img-fluid rounded-3" alt="Urban Gardening">
@@ -343,14 +348,108 @@
                 </div>
               </div>
             </div>
-
           </div>
         </div>
+
+        <!-- Completed Projects: 1, 3, 5 -->
+        <div class="tab-pane fade" id="complete">
+          <div class="row g-4">
+            <!-- 1 -->
+            <div class="col-md-4">
+              <div class="project-item shadow-sm">
+                <img src="images/service-1.jpg" class="img-fluid rounded-3" alt="Landscaping">
+                <div class="project-overlay">
+                  <h4 class="project-title">Landscaping</h4>
+                  <div class="project-buttons">
+                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                    <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 3 -->
+            <div class="col-md-4">
+              <div class="project-item shadow-sm">
+                <img src="images/service-3.jpg" class="img-fluid rounded-3" alt="Irrigation & Drainage">
+                <div class="project-overlay">
+                  <h4 class="project-title">Irrigation & Drainage</h4>
+                  <div class="project-buttons">
+                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                    <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 5 -->
+            <div class="col-md-4">
+              <div class="project-item shadow-sm">
+                <img src="images/service-5.jpg" class="img-fluid rounded-3" alt="Green Technology">
+                <div class="project-overlay">
+                  <h4 class="project-title">Green Technology</h4>
+                  <div class="project-buttons">
+                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                    <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Ongoing Projects: 2, 4, 6 -->
+        <div class="tab-pane fade" id="ongoing">
+          <div class="row g-4">
+            <!-- 2 -->
+            <div class="col-md-4">
+              <div class="project-item shadow-sm">
+                <img src="images/service-2.jpg" class="img-fluid rounded-3" alt="Pruning Plants">
+                <div class="project-overlay">
+                  <h4 class="project-title">Pruning Plants</h4>
+                  <div class="project-buttons">
+                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                    <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 4 -->
+            <div class="col-md-4">
+              <div class="project-item shadow-sm">
+                <img src="images/service-4.jpg" class="img-fluid rounded-3" alt="Garden Maintenance">
+                <div class="project-overlay">
+                  <h4 class="project-title">Garden Maintenance</h4>
+                  <div class="project-buttons">
+                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                    <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 6 -->
+            <div class="col-md-4">
+              <div class="project-item shadow-sm">
+                <img src="images/service-6.jpg" class="img-fluid rounded-3" alt="Urban Gardening">
+                <div class="project-overlay">
+                  <h4 class="project-title">Urban Gardening</h4>
+                  <div class="project-buttons">
+                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                    <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
     <!-- Footer -->
-    <footer class="text-white pt-5 pb-5 prj-footer ">
+    <footer class="text-white pt-5 pb-5 prj-footer">
       <div class="container mt-5 mb-5">
         <div class="row">
           <div class="col-md-4 mb-4">
